Se cambia el main

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <a href="#">Servicios</a>
     </nav>
     <main>
-        <p>Ejemplo</p>
+        <p>Ejemplo 1</p>
+        <p>Ejemplo 2</p>
+        <p>Ejemplo 3</p>
     </main>
 </body>
 </html>
