--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <p>Ejemplo 1</p>
         <p>Ejemplo 2</p>
         <p>Ejemplo 3</p>
+        <p>tia paola</p>
+        <p>¿hola?</p>
         <p>Ejemplo 435</p>
     </main>
 </body>
